fix(client): error display alignment issues

--- a/packages/client/src/css/utilities.scss
+++ b/packages/client/src/css/utilities.scss
@@ -201,3 +201,7 @@ $heights-list: 0, 24, 48, 52, 600;
 .m-mb-36 {
   margin-bottom: 36px;
 }
+
+.bottom-separator-20 {
+  margin-bottom: 20px;
+}
